# src/main/java/com/plip/video/application/port/in/dto/VideoCompleteCommand.java
@@ -5,6 +5,7 @@ import java.util.UUID;
 public record VideoCompleteCommand(
 		UUID videoUuid,
 		UUID userUuid,
-		String caption
+		String caption,
+		String thumbnailS3Key
 ) {
 }
