# src/main/java/com/plip/video/application/port/in/dto/VideoThumbnailUploadUrlCommand.java
@@ -1,0 +1,11 @@
+package com.plip.video.application.port.in.dto;
+
+import java.util.UUID;
+
+public record VideoThumbnailUploadUrlCommand(
+		UUID userUuid,
+		UUID videoUuid,
+		String contentType,
+		Long contentLengthBytes
+) {
+}
